# mila-docs

./: .gitignore  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: Acknowledgement_text.md  Extra_compute.md  Handbook.md  Information.md  Purpose.md  Theory_cluster.md  Userguide.md  Userguide_python.rst  index.md
docs/examples/: make_example_graph.py
docs/examples/distributed/: index.md
docs/examples/distributed/LLM_training/: deepspeed_model.py  deepspeed_transformer_layer.py  environment.yaml  job.sh
docs/examples/distributed/llm_finetuning/: index.rst  job.sh  main.py  pyproject.toml
docs/examples/frameworks/: index.md
docs/examples/frameworks/jax_setup/: README.rst
docs/examples/frameworks/pytorch_setup/: README.rst  index.rst  job.sh  pyproject.toml
docs/examples/good_practices/: index.md
docs/examples/good_practices/code_checkpointing/: job.sh
